# twofluid-ai-generated

./: README.md  TRANSCRIPT.md  plasma_model.py  pyproject.toml  shock_simulation.py
hints/: constants.txt  initial_conditions_from_grad_school.lua
